# orcho

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: cd.yaml  ci.yaml
crates/orcho/: Cargo.toml
crates/orcho/src/: exec.rs  lib.rs  main.rs  project.rs
crates/orcho/src/commands/: run.rs
example/: orcho.config.js  package.json  pnpm-lock.yaml
examples/basic/: orcho.yaml  orcho.yml  pnpm-lock.yaml  tsconfig.json
examples/basic-workspace/: orcho.json  pnpm-lock.yaml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
